fixed issue with image alignment by aktering css in custom.css

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -165,3 +165,10 @@ body #sidebar hr {
 	float: right;
 }
 
+#body img  {
+    margin-top: 1rem;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+    display: block;
+    text-align: left;
+}
